image range and average implemented

--- a/defaults.ini
+++ b/defaults.ini
@@ -76,6 +76,7 @@ options = auto sequence, software trigger, external/software trigger
 default = external/software trigger
 
 [trigger_source]
+enable = True
 options = software, external TTL
 default = external TTL
 
@@ -94,7 +95,7 @@ max = 60
 decimals = 6
 
 [binning]
-max = 4
+options = 1, 2, 4
 horizontal_default = 1
 vertical_default = 1
 
