load/save settings

--- a/defaults.ini
+++ b/defaults.ini
@@ -135,7 +135,7 @@ default = False
 default = True
 
 [file_name_save]
-default = saved_settings\pixelfly_settings
+default = pixelfly_settings
 
 [append_time]
 default = True
