--- a/defaults.ini
+++ b/defaults.ini
@@ -54,6 +54,10 @@ standard (1392*1040) = standard
 extended (800*600) = extended
 options = standard (1392*1040), extended (800*600)
 default = standard (1392*1040)
+standard (1392*1040) absolute_xmax = 1392
+standard (1392*1040) absolute_ymax = 1040
+extended (800*600) absolute_xmax = 800
+extended (800*600) absolute_ymax = 600
 
 [clock_rate]
 12 MHz = 12000000
@@ -101,34 +105,17 @@ vertical_default = 1
 
 # default values of image control parameters
 [image_number]
-max = 1000
+max = 100000
 default = 10
 
-[standard_absolute_range]
-xmin = 0
-xmax = 1391
-ymin = 0
-ymax = 1039
-
-[extended_absolute_range]
-xmin = 0
-xmax = 799
-ymin = 0
-ymax = 599
-
-[image_range_xmin]
-default = 0
-
-[image_range_xmax]
-default = 1391
-
-[image_range_ymin]
-default = 0
-
-[image_range_ymax]
-default = 1039
+[roi]
+xmin = 375
+xmax = 615
+ymin = 240
+ymax = 440
 
 [gaussian_fit]
+enable = False
 default = False
 
 [image_save]
