ROi selection and some gui elements update

--- a/defaults.ini
+++ b/defaults.ini
@@ -73,14 +73,13 @@ options = 1, 1.5
 default = 1
 
 [trigger_mode]
-auto sequence = auto sequence
-software trigger = software trigger
-external/software trigger = external exposure start & software trigger
-options = auto sequence, software trigger, external/software trigger
-default = external/software trigger
-
-[trigger_source]
-enable = True
+# auto sequence = auto sequence
+# software trigger = software trigger
+# external/software trigger = external exposure start & software trigger
+# options = auto sequence, software trigger, external/software trigger
+# default = external/software trigger
+software = software trigger
+external TTL = external exposure start & software trigger
 options = software, external TTL
 default = external TTL
 
@@ -115,14 +114,13 @@ ymin = 240
 ymax = 440
 
 [gaussian_fit]
-enable = False
+cpu_limit = 60000
 default = False
 
 [image_save]
+file_name = saved_images\images.hdf
 default = True
 
-[file_name_save]
-default = pixelfly_settings
-
-[append_time]
-default = True
+[setting_save]
+file_name = pixelfly_settings
+append_time = True
