--- a/defaults.ini
+++ b/defaults.ini
@@ -124,3 +124,6 @@ default = True
 [setting_save]
 file_name = pixelfly_settings
 append_time = True
+
+[scan_file_name]
+default = scan_sequence\sequence.ini
