--- a/defaults.ini
+++ b/defaults.ini
@@ -126,4 +126,4 @@ file_name = pixelfly_settings
 append_time = True
 
 [scan_file_name]
-default = scan_sequence\sequence.ini
+default = scan_sequence\latest_sequence.ini
