--- a/defaults.ini
+++ b/defaults.ini
@@ -122,7 +122,7 @@ file_name = saved_images\images.hdf
 default = True
 
 [setting_save]
-file_name = pixelfly_settings
+file_name = program_setting
 append_time = True
 
 [scan_file_name]
