--- a/defaults_example.ini
+++ b/defaults_example.ini
@@ -127,3 +127,7 @@ append_time = True
 
 [scan_file_name]
 default = scan_sequence\latest_sequence.ini
+
+[tcp_connection]
+host_addr = 127.0.0.1
+port = 10000
