confugure hdf group name and data save as image

--- a/defaults_example.ini
+++ b/defaults_example.ini
@@ -118,7 +118,8 @@ cpu_limit = 60000
 default = False
 
 [image_save]
-file_name = saved_images\images.hdf
+file_name = saved_images\images
+run_name = run
 default = True
 
 [setting_save]
