--- a/defaults_example.ini
+++ b/defaults_example.ini
@@ -132,3 +132,7 @@ default = scan_sequence\latest_sequence.ini
 [tcp_connection]
 host_addr = 127.0.0.1
 port = 10000
+
+[measurement]
+options = fluorescence, absorption
+default = fluorescence
