"customized" sensor format

--- a/defaults_example.ini
+++ b/defaults_example.ini
@@ -49,15 +49,19 @@
 
 
 # default values of camera control parameters
+# to make binning work properly, customized dimension has to be multiples of 4
 [sensor_format]
 standard (1392*1040) = standard
 extended (800*600) = extended
-options = standard (1392*1040), extended (800*600)
+customized (400*300) = extended
+options = standard (1392*1040), extended (800*600), customized (400*300)
 default = standard (1392*1040)
 standard (1392*1040) absolute_xmax = 1392
 standard (1392*1040) absolute_ymax = 1040
 extended (800*600) absolute_xmax = 800
 extended (800*600) absolute_ymax = 600
+customized (400*300) absolute_xmax = 400
+customized (400*300) absolute_ymax = 300
 
 [clock_rate]
 12 MHz = 12000000
