--- a/defaults_example.ini
+++ b/defaults_example.ini
@@ -131,7 +131,7 @@ file_name = program_setting
 append_time = True
 
 [scan_file_name]
-default = scan_sequence\latest_sequence.ini
+default = scan_sequences\latest_sequence.ini
 
 [tcp_connection]
 host_addr = 127.0.0.1
