fix gaussian fit bugs

--- a/program_setting_latest.ini
+++ b/program_setting_latest.ini
@@ -2,7 +2,7 @@
 meas_mode = fluorescence
 
 [image_control]
-num_image = 10
+num_image = 15
 xmin = 68
 xmax = 216
 ymin = 31
@@ -10,10 +10,10 @@ ymax = 217
 2D_gaussian_fit = True
 run_name = run
 image_auto_save = True
-gaussian_filter = False
-gaussian_filter_shape_x = 29
-gaussian_filter_shape_y = 63
-gaussian_filter_sigma = 10.4
+gaussian_filter = True
+gaussian_filter_shape_x = 45
+gaussian_filter_shape_y = 45
+gaussian_filter_sigma = 15.0
 auto_scale_state_Background = True
 auto_scale_state_Raw Signal = True
 auto_scale_state_Signal minus ave bkg = True
