--- a/examples/defaults_example.ini
+++ b/examples/defaults_example.ini
@@ -53,15 +53,18 @@
 [sensor_format]
 standard (1392*1040) = standard
 extended (800*600) = extended
-customized (400*300) = extended
-options = standard (1392*1040), extended (800*600), customized (400*300)
+customized (280*280) = extended
+customized (160*480) = extended
+options = standard (1392*1040), extended (800*600), customized (280*280), customized (160*480)
 default = standard (1392*1040)
 standard (1392*1040) absolute_xmax = 1392
 standard (1392*1040) absolute_ymax = 1040
 extended (800*600) absolute_xmax = 800
 extended (800*600) absolute_ymax = 600
-customized (400*300) absolute_xmax = 400
-customized (400*300) absolute_ymax = 300
+customized (280*280) absolute_xmax = 280
+customized (280*280) absolute_ymax = 280
+customized (160*480) absolute_xmax = 160
+customized (160*480) absolute_ymax = 480
 
 [clock_rate]
 12 MHz = 12000000
@@ -96,15 +99,15 @@ default = ms
 
 [expo_time]
 # in seconds
-default = 0.01
+default = 0.03
 min = 0.000001
 max = 60
 decimals = 6
 
 [binning]
 options = 1, 2, 4
-horizontal_default = 1
-vertical_default = 1
+horizontal_default = 4
+vertical_default = 4
 
 # default values of image control parameters
 [image_number]
@@ -112,14 +115,18 @@ max = 100000
 default = 10
 
 [roi]
-xmin = 375
-xmax = 615
-ymin = 240
-ymax = 440
+xmin = 110
+xmax = 170
+ymin = 110
+ymax = 170
 
 [gaussian_fit]
-cpu_limit = 60000
+cpu_limit = 50000
 default = False
+
+[gaussian_filter]
+state = True
+sigma = 15.00
 
 [image_save]
 file_name = saved_images\images
@@ -134,9 +141,18 @@ append_time = True
 default = scan_sequences\latest_sequence.ini
 
 [tcp_connection]
+# host_addr = 172.28.174.240
+# port = 65533
 host_addr = 127.0.0.1
-port = 10000
+port = 65534
 
 [measurement]
 options = fluorescence, absorption
 default = fluorescence
+
+[image_auto_scale]
+Background = True
+Raw Signal = True
+Signal minus ave bkg = True
+Optical density = True
+Average image = True
