--- a/examples/program_setting_example.ini
+++ b/examples/program_setting_example.ini
@@ -1,23 +1,34 @@
+[record_control]
+meas_mode = fluorescence
+
 [image_control]
-num_image = 10
-xmin = 79
-xmax = 136
-ymin = 82
-ymax = 124
-2d_gaussian_fit = True
+num_image = 301
+xmin = 94
+xmax = 268
+ymin = 68
+ymax = 203
+2D_gaussian_fit = False
 run_name = run
 image_auto_save = True
+gaussian_filter = True
+gaussian_filter_sigma = 7.5
+auto_scale_state_Background = True
+auto_scale_state_Raw Signal = True
+auto_scale_state_Signal minus ave bkg = True
+auto_scale_state_Optical density = True
+auto_scale_state_Average_image = True
 
 [camera_control]
-sensor_format = extended (800*600)
+sensor_format = standard (1392*1040)
 clock_rate = 12 MHz
 conversion_factor = 1
-trigger_mode = software
-exposure_time = 3.0
+trigger_mode = external TTL
+exposure_time = 10.0
 exposure_unit = ms
 binning_horizontal = 4
 binning_vertical = 4
 
 [tcp_control]
 host_addr = 127.0.0.1
-port = 10000
+port = 65534
+
