--- a/program_setting_latest.ini
+++ b/program_setting_latest.ini
@@ -2,18 +2,16 @@
 meas_mode = fluorescence
 
 [image_control]
-num_image = 15
-xmin = 68
-xmax = 216
-ymin = 31
-ymax = 217
-2D_gaussian_fit = True
+num_image = 301
+xmin = 94
+xmax = 268
+ymin = 68
+ymax = 203
+2D_gaussian_fit = False
 run_name = run
 image_auto_save = True
 gaussian_filter = True
-gaussian_filter_shape_x = 45
-gaussian_filter_shape_y = 45
-gaussian_filter_sigma = 15.0
+gaussian_filter_sigma = 7.5
 auto_scale_state_Background = True
 auto_scale_state_Raw Signal = True
 auto_scale_state_Signal minus ave bkg = True
@@ -25,7 +23,7 @@ sensor_format = standard (1392*1040)
 clock_rate = 12 MHz
 conversion_factor = 1
 trigger_mode = external TTL
-exposure_time = 30.0
+exposure_time = 10.0
 exposure_unit = ms
 binning_horizontal = 4
 binning_vertical = 4
